# mcp-client

./: Cargo.toml  LICENSE
src/: cli.rs  client.rs  lib.rs  main.rs
