[package]
name = "mcp-client"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["cargo"] }
rmcp = { version = "1.5", features = ["client", "transport-streamable-http-client-reqwest"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
